# EuRoC_dataset_convertor

./: CMakeLists.txt  README.md  package.xml
config/: loitor_dataset_converter.yaml  loitor_dataset_converter.yaml~
launch/: convert_dataset.launch  convert_loitor_dataset.launch
src/: MultiVechileStereo_data_convertor.cpp  MultiVechileStereo_data_convertor_syn.cpp  bag_to_images.cpp  file-system-tools.cpp  generate_kalibr_rosbag.cpp  segway_data_convertor.cpp  segway_data_convertor_doublesphere.cpp  segway_data_convertor_sync.cpp
